--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
+    "gh-pages": "^3.2.3",
     "gh-pages-deploy": "^0.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -48,7 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
-  }
+  "devDependencies": {}
 }
